--- a/src/flexlight/tsconfig.json
+++ b/src/flexlight/tsconfig.json
@@ -22,6 +22,7 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitAny": true,
     "allowJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
