--- a/src/loader/tsconfig.json
+++ b/src/loader/tsconfig.json
@@ -22,11 +22,12 @@
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "noImplicitAny": true,
     "allowJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
     "rootDir": "./",
-    "outDir": "../../public/build/examples",
+    "outDir": "../../public/build/loader",
   },
 }
