--- a/src/config-ui/tsconfig.json
+++ b/src/config-ui/tsconfig.json
@@ -26,6 +26,7 @@
     "allowJs": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "types": ["@webgpu/types"],
 
     "rootDir": "./",
     "outDir": "../../public/build/config-ui",
