--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 public/build
-public/static/objects
+tmp
 src/config-ui/node_modules
 src/flexlight/node_modules
 src/loader/node_modules
+
+
+public/static/objects/local
