perspective correction of temporal averaging, hole interpolation filter, moved sample rejection to shift pass, sketch of potential denoiser based on median filter

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ src/config-ui/node_modules
 src/flexlight/node_modules
 src/loader/node_modules
 
-
+# public/static/textures
 public/static/objects/local
