--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
+#imports
+node_modules
+
+# build directories
 public/build
 tmp
 
-node_modules
-src/config-ui/node_modules
-src/flexlight/node_modules
-src/loader/node_modules
-
+# graphic includes
 # public/static/textures
 public/static/objects/local
