--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "main": "server.mjs",
   "scripts": {
-    "start": "node ."
+    "start": "docker compose up --build",
+    "dev": "node index.js"
   },
   "dependencies": {
     "express": "^4.21.2"
